--- a/client/package.json
+++ b/client/package.json
@@ -50,6 +50,7 @@
     "node-sass": "^4.14.1",
     "react-app-rewired": "^2.1.6",
     "sass-loader": "^8.0.2",
+    "sass-resources-loader": "^2.0.3",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11"
   }
