--- a/server/api/games/models/games.settings.json
+++ b/server/api/games/models/games.settings.json
@@ -95,6 +95,17 @@
       ],
       "plugin": "upload",
       "required": false
+    },
+    "description_figure": {
+      "model": "file",
+      "via": "related",
+      "allowedTypes": [
+        "images",
+        "files",
+        "videos"
+      ],
+      "plugin": "upload",
+      "required": false
     }
   }
 }
